--- a/styles8.css
+++ b/styles8.css
@@ -24,7 +24,7 @@ html{
 h2{
     font-size: 14px;
     font-family: 'Montserrat';
-    font-weight: 400;
+    font-weight: 500;
     color: hsl(228, 12%, 48%);
     margin-left: 282px;
     text-align: left;
@@ -34,10 +34,9 @@ h2{
 h1{
     font-size: 24px;
     color: hsl(212, 21%, 14%);
-    font-weight: 900;
+    font-weight: 700;
     font-family: 'Fraunces';
     width: 180px;
-    line-height: 30px;
     margin-left: 282px ;
 
 }
@@ -48,7 +47,7 @@ h3{
     width: 226px;
     font-size: 14px;
     font-family: 'Montserrat';
-    font-weight: 400;
+    font-weight: 500;
     color: hsl(228, 12%, 48%);
     margin-left: 282px;
 
@@ -59,6 +58,9 @@ h4{
     width: 57px;
     margin-left: 282px;
     color: hsl(228, 12%, 48%);
+    font-family: 'Fraunces';
+    font-size: 14px;
+    font-weight: 400;
 }
 
 /*$149.99*/
@@ -66,7 +68,8 @@ h5{
     margin-left: 282px;
     color: hsl(158, 36%, 37%);
     font-weight: 700;
-    font-size: 32px; ;
+    font-size: 32px;
+    font-family:'Fraunces';
 }
 
 /*Add to Cart*/
