--- a/styles8.css
+++ b/styles8.css
@@ -1,6 +1,9 @@
 html{
     width: 1440px;
-    height: 571.5px;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: hsl(30, 38%, 92%);
 }
 
@@ -22,7 +25,7 @@ html{
 /*P E R F U M E*/
 
 h2{
-    font-size: 14px;
+    font-size: 0.9rem;
     font-family: 'Montserrat';
     font-weight: 500;
     color: hsl(228, 12%, 48%);
@@ -32,11 +35,12 @@ h2{
 
 /*Gabrielle Essence Eau De Parfum*/
 h1{
-    font-size: 24px;
+    font-size: 1.5rem;
     color: hsl(212, 21%, 14%);
     font-weight: 700;
     font-family: 'Fraunces';
     width: 180px;
+    line-height: 30px;
     margin-left: 282px ;
 
 }
@@ -44,8 +48,8 @@ h1{
 /*A floral, solar and voluptuous interpretation composed by Olivier Polge, 
     Perfumer-Creator for the House of CHANEL.*/
 h3{
-    width: 226px;
-    font-size: 14px;
+    width: 230px;
+    font-size: 0.9rem;
     font-family: 'Montserrat';
     font-weight: 500;
     color: hsl(228, 12%, 48%);
@@ -56,25 +60,26 @@ h3{
 /*$169.99*/
 h4{
     width: 57px;
-    margin-left: 282px;
+    margin: 5px 15px 17px 15px;
     color: hsl(228, 12%, 48%);
     font-family: 'Fraunces';
-    font-size: 14px;
     font-weight: 400;
+    font-size: 0.9rem;
 }
 
 /*$149.99*/
 h5{
-    margin-left: 282px;
+    margin: 0px 0px 0px 282px;
     color: hsl(158, 36%, 37%);
     font-weight: 700;
-    font-size: 32px;
-    font-family:'Fraunces';
+    font-size: 2rem; 
+    font-family: 'Fraunces';
+
 }
 
 /*Add to Cart*/
 .button p {
-    font-size: 14px;
+    font-size: 0.9rem;
     color:hsl(0, 0%, 100%) ;
     text-align: center;
     padding:15px 0px 0px 0px ;
@@ -89,6 +94,7 @@ h5{
     background-color: hsl(158, 36%, 37%) ;
     border-radius: 5px;
     margin-left: 282px;
+    margin-bottom: 28px;
 }
 
 /*icon-cart*/
@@ -99,16 +105,22 @@ h5{
 
 hr{
     position: relative;
-    width: 46px;
+    width: 51px;
     border: 1px solid hsl(228, 12%, 48%) ;
     transform: rotate(-180deg);
-    top: 19px;
+    top: 17px;
+}
+
+.price{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 /*footer*/
 .attribution { 
-    font-size: 11px; 
+    font-size: 0.6rem; 
     text-align: center;
-    padding-top: 15px; 
+    margin-top: 15px; 
 }
 
 .attribution a { 
