--- a/styles8.css
+++ b/styles8.css
@@ -1,129 +1,143 @@
-html{
-    width: 1440px;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+  /*
+    2. Remove default margin
+  */
+  * {
+    margin: 0;
+  }
+  /*
+    3. Allow percentage-based heights in the application
+  */
+  html, body {
+    height: 100%;
+  }
+  /*
+    Typographic tweaks!
+    4. Add accessible line-height
+    5. Improve text rendering
+  */
+  body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+  }
+  /*
+    6. Improve media defaults
+  */
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  /*
+    7. Remove built-in form typography styles
+  */
+  input, button, textarea, select {
+    font: inherit;
+  }
+  /*
+    9. Create a root stacking context
+  */
+  #root, #__next {
+    isolation: isolate;
+  }
+
+body{
     background-color: hsl(30, 38%, 92%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    left: 50%;
 }
-
-.main{
-    width: 551px;
-    height: 484px;
-    background-color: hsl(0, 0%, 100%);
-    border-radius: 15px;
-    margin-left: 444px;
+.card{
+  background-color: hsl(0, 0%, 100%);
+  display: flex;
+  justify-content:center ;
+  align-items: center;
+  border-radius: 10px;
+  width: 50%;
 }
-
+.right{
+  width:auto;
+}
 /*img of the product*/
-.perfume{
-    width: 272px;
-    height: 484px;
-    border-radius: 15px 0px 0px 15px;
+picture{
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  padding: 0px 15px 0px 0px;
+  max-width: 600px;
 }
 
-/*P E R F U M E*/
-
+/*Perfume*/
 h2{
-    font-size: 0.9rem;
-    font-family: 'Montserrat';
-    font-weight: 500;
-    color: hsl(228, 12%, 48%);
-    margin-left: 282px;
-    text-align: left;
+font-family: 'Montserrat';
+font-weight: 500;
+font-size: 16px;
+letter-spacing: 3px;
+color: hsl(228, 12%, 48%);
+padding: 10px 15px 10px 15px;
 }
 
 /*Gabrielle Essence Eau De Parfum*/
-h1{
-    font-size: 1.5rem;
-    color: hsl(212, 21%, 14%);
-    font-weight: 700;
-    font-family: 'Fraunces';
-    width: 180px;
-    line-height: 30px;
-    margin-left: 282px ;
+.img-details p{
+  font-family: 'Fraunces';
+  font-weight: 700;
+  font-size: 2rem;
+  color: hsl(212, 21%, 14%);
+  padding: 0px 150px 15px 10px;
+} 
 
+/*A floral,solar and voluptuous interpretation compsed by Olivier Polge,Perfumer-Creator for the House of CHANEL*/
+.img-description p{
+  font-weight: 500;
+  font-size: 16px;
+  color: hsl(228, 12%, 48%);
+  font-family: 'Montserrat';
+  padding: 5px 120px 5px 20px;
 }
 
-/*A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-    Perfumer-Creator for the House of CHANEL.*/
-h3{
-    width: 230px;
-    font-size: 0.9rem;
-    font-family: 'Montserrat';
-    font-weight: 500;
-    color: hsl(228, 12%, 48%);
-    margin-left: 282px;
-
+/*button*/
+button{
+  background-color: hsl(158, 36%, 37%);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid hsl(158, 36%, 37%);
+  width: 50%;
+  height: 48px;
 }
 
-/*$169.99*/
-h4{
-    width: 57px;
-    margin: 5px 15px 17px 15px;
-    color: hsl(228, 12%, 48%);
-    font-family: 'Fraunces';
-    font-weight: 400;
-    font-size: 0.9rem;
-}
-
-/*$149.99*/
-h5{
-    margin: 0px 0px 0px 282px;
-    color: hsl(158, 36%, 37%);
-    font-weight: 700;
-    font-size: 2rem; 
-    font-family: 'Fraunces';
+#button {
+  font-size:1.3 rem;
+  font-weight: 700;
+  font-family: 'Montserrat';
+  color: hsl(0, 0%, 100%);
 
 }
+/*a:hover{
+  background-color: rgb(61, 31, 230);
+}*/
 
-/*Add to Cart*/
-.button p {
-    font-size: 0.9rem;
-    color:hsl(0, 0%, 100%) ;
-    text-align: center;
-    padding:15px 0px 0px 0px ;
-    font-weight: 700;
-    font-family: 'Montserrat';
+.new-price{
+  font-size: xx-large;
+  color: hsl(158, 36%, 37%);
+  font-family:'Fraunces';
+  font-weight: 700;
+  padding-left: 10px;
 }
-
-/*green button*/
- div .button{
-    width: 215px;
-    height: 48px;
-    background-color: hsl(158, 36%, 37%) ;
-    border-radius: 5px;
-    margin-left: 282px;
-    margin-bottom: 28px;
+.old-price{
+  font-size: 16px;
+  color: hsl(228, 12%, 48%);
+  font-family:'Fraunces';
+  padding-left: 5px;
+  font-weight: 700;
 }
+.prices{
+  display: flex;
+  align-items: center;
 
-/*icon-cart*/
-.button img{
-    background-color:hsl(158, 36%, 37%) ;
-    padding-right: 3px;
-}
-
-hr{
-    position: relative;
-    width: 51px;
-    border: 1px solid hsl(228, 12%, 48%) ;
-    transform: rotate(-180deg);
-    top: 17px;
-}
-
-.price{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/*footer*/
-.attribution { 
-    font-size: 0.6rem; 
-    text-align: center;
-    margin-top: 15px; 
-}
-
-.attribution a { 
-    color: hsl(228, 45%, 44%); 
 }
