--- a/styles8.css
+++ b/styles8.css
@@ -148,6 +148,16 @@ button:hover{
   padding-left: 10px;
 }
 
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0); 
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap; 
+  width: 1px;
+}
+
 /*medias queries mobiles*/
 @media screen and (max-width=400px) {
   .card{
